src/test/ui/parser/issue-14303-impl.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-impl.rs:3:13
   |
LL | impl<'a, T, 'b> X<T> {}
   |     --------^^- help: reorder the parameters: lifetimes, then types: `<'a, 'b, T>`

warning: lifetime parameter `'b` never used
  --> $DIR/issue-14303-impl.rs:3:13
   |
LL | impl<'a, T, 'b> X<T> {}
   |          ---^^
   |          |
   |          help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/issue-14303-impl.rs:3:6
   |
LL | impl<'a, T, 'b> X<T> {}
   |      ^^-----
   |      |
   |      help: elide the unused lifetime

error: aborting due to previous error

